--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "bs4>=0.0.2",
+    "ipdb>=0.13.13",
+    "lxml>=6.0.2",
     "numpy>=2.3.5",
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
+    "pdfplumber>=0.11.9",
+    "requests>=2.32.5",
     "selenium>=4.39.0",
     "setuptools>=80.9.0",
     "undetected-chromedriver>=3.5.5",
